Bug 58909 - Extension upgrade fails with error "Cannot create folder"
Summary: Extension upgrade fails with error "Cannot create folder"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other All
: medium major
Assignee: Stephan Bergmann
URL:
Whiteboard: BSA target:4.1.0 target:4.0.0.2
Keywords: regression
: 59446 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-12-31 15:49 UTC by Marvin
Modified: 2013-01-28 18:35 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marvin 2012-12-31 15:49:22 UTC
Installation of LT2.0 does not work under LibreOffice 4.0.0 Beta 2.
Installation always stops with an error message:
"Ein Fehler ist während der Installation der Extension LanguageTool. Stil- und Grammatikprüfung aufgetreten. Die Fehlermeldung ist: [context="bak"] caught unexpected com.sun.star.ucb.ContentCreationException: Cannot create folder (invalid path): 
Die Extension wird nicht installiert."

I'm using Win7 prof SP1 32bit german

Thanks and all the best for 2013.
Operating System: Windows 7
Version: 4.0.0.0.beta2
Last worked in: 3.6.4.3 release
Comment 1 Rainer Bielefeld Retired 2013-01-01 14:49:58 UTC
NOT reproducible with parallel installation of  "LOdev  4.0.0.0.beta2   -  GERMAN UI / German Locale  [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch

@giedi_primus:
Can you please try with a Master installation (Use GUI Installer from
<http://extensions.libreoffice.org/extension-center/libreoffice-server-installation-gui>) installed in a public documents folder, in bootstrap.ini use "UserInstallation=$ORIGIN/../Data/settings"?
Comment 2 Marvin 2013-01-01 18:34:38 UTC
I did some more testing, it seemse that this problem only occurs when LanguageTool1.9 ist installed. If I remove the old version, I can install Languagetool 2.0 under LO4.0.0 Beta 2.
Comment 3 Rainer Bielefeld Retired 2013-01-01 18:53:11 UTC
[Reproducible] with parallel installation of  "LOdev  4.0.0.0.beta2   -  GERMAN UI / German Locale  [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch

I removed my existing "LanguageTool 2.0" -> Installed LanguageTool 1.9 -> Exit and relaunch LibO -> Start Installation of "LanguageTool-2.0.oxt" via Extension Manager -> Became asked to remove "LanguageTool 2.0" -> Confirmed Removal -> Error Message (see below)

Message:
----------
(com.sun.star.lang.WrappedTargetRuntimeException) { { { Message = "[context=\"bak\"] caught unexpected com.sun.star.ucb.ContentCreationException: Cannot create folder (invalid path): ", Context = (com.sun.star.uno.XInterface) @0 } }, TargetException = (any) { (com.sun.star.ucb.ContentCreationException) { { Message = "Cannot create folder (invalid path): ", Context = (com.sun.star.uno.XInterface) @0 }, eError = (com.sun.star.ucb.ContentCreationError) UNKNOWN } } }

@Daniel:
Can you please check?
Comment 4 Daniel Naber 2013-01-01 19:25:57 UTC
I can now confirm the problem under Ubuntu Linux with LibreOffice 4.0.0 Beta 2, whereas it works with LO 3.6.0.4. As it works with LO 3.6 this seems to be a LO problem - I don't know what LanguageTool might be doing wrong to cause this.
Comment 5 Rainer Bielefeld Retired 2013-01-02 05:29:58 UTC
@Stephan:
can you help here?
Comment 6 Rainer Bielefeld Retired 2013-01-02 05:53:53 UTC
OS=ALL due to comment 4

I did some more tests with Extension "GeoMap" and with server  installation of  "4.1.0.0.alpha0+ (Build ID: c97a46ad210c4747af2309d0c75d9a0bdb642ed) TinderBox: Win-x86@6, Branch:master, Time: 2012-12-31_22:40:07   -  ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LO41 Masters User Profile.

Update from "GeoMap 2.0" to "GeoMap 3.0" failed with the same symptoms.
It does not matter whether I leave file name "geomap.oxt" for both versions or I rename to "geomap20.oxt", "geomap30.oxt"
Comment 7 Not Assigned 2013-01-10 11:17:29 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8dd405d32cb331818dc8f9bd1af3c5a074100f0f

fdo#58909: Missing BAK_EXTENSIONS bootstrap variable



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Stephan Bergmann 2013-01-10 11:43:12 UTC
Requested backport of fix from comment 7 to libreoffice-4-0 as <https://gerrit.libreoffice.org/#/c/1626/>.
Comment 9 Not Assigned 2013-01-10 12:40:53 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=147ce2ebeeac686d0a8e9e3d6d804aeba0fcbcdc&h=libreoffice-4-0

fdo#58909: Missing BAK_EXTENSIONS bootstrap variable


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Stephan Bergmann 2013-01-17 07:52:30 UTC
*** Bug 59446 has been marked as a duplicate of this bug. ***
Comment 11 Rainer Bielefeld Retired 2013-01-28 18:35:50 UTC
Today worked fine as expected with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 8cad36dfcd6e4ae583332bf34b8bbf0ceb19aa9) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-01-27_00:22:13" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile