fdo#58909: Missing BAK_EXTENSIONS bootstrap variable

daeed90f4586eb9533041fb89bee163a5193596c "re-base on ALv2 code" had incorporated
from <http://svn.apache.org/viewvc?view=revision&revision=1172102> "imported
patch extensions_i117681.patch" the parts using BAK_EXTENSIONS in
desktop/source/deployment/manager/, but not the parts setting BAK_EXTENSIONS in
scp2/source/ooo/.

Also, setting the stamp for "bak" in PackageManagerImpl::create needed to be
adapted to bee742eb7a0d5dfe23e61d9ee49a29286de90256 "Fix sense of r/o detection
code, and clean up" and 61eeb689d7605a23c3e71c652b57ee65cf5b28dc "fix smoketest
- need to check read-only-ness of non-existent paths."

(cherry picked from commit 8dd405d32cb331818dc8f9bd1af3c5a074100f0f)
Conflicts:
	desktop/source/deployment/manager/dp_manager.cxx

Change-Id: Ie73ce50b6c26bbee6f3b7230a4d163715180ef52
Reviewed-on: https://gerrit.libreoffice.org/1626
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>